[tool.poetry]
name = "geo-rest"
version = "0.1.0"
description = "REST server that provides geo-json data"
authors = ["Manon <manon.jacquin@gmail.com>"]
license = "BSDv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
geojson = "^3.1.0"
fastapi = "^0.112.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ufmt = "^2.7.2"
usort = "^1.0.8.post1"
mypy = "^1.11.2"
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
